[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/PlayerAreaNotifier/PlayerAreaNotifier.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/GUI/TapToEnter.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="AreaNotifier" type="ReferenceRect"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 1
border_color = Color( 0.913725, 1, 0, 1 )
script = ExtResource( 1 )

[node name="TapTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = -32.0
margin_right = 12.0
margin_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 32.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.92549, 1, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "AN"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
